// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Step.vue Check if the Step.vue component has the expected UI if current 1`] = `
<div class="step-content">
  <div class="step-actions">
    <div class="field not-selected">
      <b-radio-stub value="no" nativevalue="yes"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></b-radio-stub>
    </div>
    <div class="field selected">
      <b-radio-stub value="no" nativevalue="no"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></b-radio-stub>
    </div>
  </div>
</div>
`;

exports[`Step.vue Check if the Step.vue component has the expected UI if disabled due is set 1`] = `
<div class="step-content">
  <div class="step-actions">
    <div class="field not-selected">
      <b-radio-stub value="no" nativevalue="yes"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></b-radio-stub>
    </div>
    <div class="field selected">
      <b-radio-stub value="no" nativevalue="no"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></b-radio-stub>
    </div>
  </div>
</div>
`;

exports[`Step.vue Check if the Step.vue component has the expected UI if inactive 1`] = `
<div class="step-content">
  <!---->
</div>
`;

exports[`Step.vue Check if the Step.vue component has the expected UI if previous 1`] = `
<div class="step-content">
  <div class="step-description vocab-body body-normal">
    <p class="vocab-body body-normal">
      stepper.SA.not-selected
    </p>
  </div>
</div>
`;

exports[`Step.vue Check if the Step.vue component has the expected UI if reversed 1`] = `
<div class="step-content">
  <div class="step-actions">
    <div class="field not-selected">
      <b-radio-stub value="yes" nativevalue="yes"><span class="vocab-body body-normal">stepper.yesstepper.SA.selected</span></b-radio-stub>
    </div>
    <div class="field selected">
      <b-radio-stub value="yes" nativevalue="no"><span class="vocab-body body-normal">stepper.nostepper.SA.not-selected</span></b-radio-stub>
    </div>
  </div>
</div>
`;
